syntax = "proto3";
package played;
option go_package = "pb";

service Played {
    rpc GetPlayed (GetPlayedRequest) returns (GetPlayedResponse) {}

    rpc AddUser (AddUserRequest) returns (AddUserResponse) {}

    rpc RemoveUser (RemoveUserRequest) returns (RemoveUserResponse) {}

    rpc CheckWhitelist (CheckWhitelistRequest) returns (CheckWhiteListResponse) {}
}

message GameEntry {
    string name = 1;
    int32 dur = 2;
}

message GameEntryPublic {
    string name = 1;
    string dur = 2;
}

message SendPlayedResponse {}

message GetPlayedRequest {
    string user = 1;
}

message GetPlayedResponse {
    repeated GameEntryPublic games = 1;
    string first = 2;
    string last = 3;
}

message AddUserRequest {
    string user = 1;
}

message AddUserResponse {}

message RemoveUserRequest {
    string user = 1;
}

message RemoveUserResponse {}

message CheckWhitelistRequest {
    string user = 1;
}

message CheckWhiteListResponse {
    bool whitelisted = 1;
}
